--- a/styles/main.css
+++ b/styles/main.css
@@ -470,13 +470,13 @@ body.menu-active #hamburger #line3 {
   width: 100%;
 }
 
-@media (width > 500px) {
+@media (min-width: 500px) and (max-width: 1000px) {
   .work_subheader {
     font-size: 2rem;
     width: 350px;
   }
 }
-@media (width > 1000px) {
+@media (min-width: 1000px) {
   #work {
     gap: 8rem;
   }
