--- a/styles/main.css
+++ b/styles/main.css
@@ -341,6 +341,7 @@ body.menu-active #hamburger #line3 {
 }
 
 .hero_clock {
+  display: block;
   opacity: 0;
   transform: translate(0, 10px);
   animation: load 700ms 1000ms forwards;
