--- a/styles/layouts/hero.scss
+++ b/styles/layouts/hero.scss
@@ -15,8 +15,8 @@
     h1 {
         display: inline-block;
         overflow: hidden;
-        height: 2.5rem;
-        font: 800 2.5rem $inter;
+        height: $header;
+        font: 800 calc($header - 0.25rem) $inter;
     }
 
     span {
