--- a/styles/main.css
+++ b/styles/main.css
@@ -327,7 +327,7 @@ body.menu-active #hamburger #line3 {
 .hero_title h1 {
   display: inline-block;
   overflow: hidden;
-  height: min(14.5vw, 7rem);
+  height: calc(min(14.5vw, 7rem) + 0.5rem);
   font: 800 calc(min(14.5vw, 7rem) - 0.5rem) "Inter", sans-serif;
 }
 .hero_title span {
@@ -381,7 +381,7 @@ body.menu-active #hamburger #line3 {
     font-size: 2rem;
   }
   .hero_title h1 {
-    height: calc(min(14.5vw, 7rem) - 0.5rem);
+    height: min(14.5vw, 7rem);
     font-size: calc(min(14.5vw, 7rem) - 0.5rem);
   }
 }
