--- a/styles/main.css
+++ b/styles/main.css
@@ -327,7 +327,7 @@ body.menu-active #hamburger #line3 {
 .hero_title h1 {
   display: inline-block;
   overflow: hidden;
-  height: calc(min(14.5vw, 7rem) + 1rem);
+  height: min(14.5vw, 7rem);
   font: 800 calc(min(14.5vw, 7rem) - 0.5rem) "Inter", sans-serif;
 }
 .hero_title span {
